--- a/app/src/main/res/layout/planet_detail.xml
+++ b/app/src/main/res/layout/planet_detail.xml
@@ -2,7 +2,6 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
-
     <data>
         <variable
             name="description"
@@ -19,6 +18,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:minHeight="250dp"
+            android:background="#FAB297"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
