--- a/app/src/main/res/layout/fragment_planet_list.xml
+++ b/app/src/main/res/layout/fragment_planet_list.xml
@@ -23,6 +23,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            android:orientation="vertical"
             tools:listitem="@layout/item_planet" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
