--- a/app/src/main/res/layout/item_planet.xml
+++ b/app/src/main/res/layout/item_planet.xml
@@ -23,7 +23,7 @@
         android:background="?android:attr/selectableItemBackground"
         android:clickable="true"
         android:focusable="true"
-        android:minHeight="120dp"
+        android:minHeight="@dimen/planet_list_item_min_ht"
         >
 
         <TextView
@@ -31,12 +31,12 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:textColor="#4B4B4B"
-            android:textSize="24sp"
+            android:textColor="@color/title_color"
+            android:textSize="@dimen/title_txt_size"
             app:layout_constraintBottom_toTopOf="@+id/summary_tv"
             app:layout_constraintEnd_toStartOf="@+id/thumbnail"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginTop="@dimen/margin_top"
+            android:layout_marginEnd="@dimen/margin_end"
             android:text="@{title}"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
@@ -47,12 +47,12 @@
             android:id="@+id/summary_tv"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginStart="@dimen/summary_margin_start"
+            android:layout_marginTop="@dimen/summary_margin_top"
+            android:layout_marginEnd="@dimen/summary_margin_end"
             android:ellipsize="end"
             android:maxLines="2"
-            android:textSize="16sp"
+            android:textSize="@dimen/summary_text_size"
             android:text="@{description}"
             app:layout_constraintHorizontal_bias="0.5"
 
@@ -63,10 +63,10 @@
 
         <ImageView
             android:id="@+id/thumbnail"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_marginEnd="8dp"
-            android:background="#212121"
+            android:layout_width="@dimen/thumbnail_w_h"
+            android:layout_height="@dimen/thumbnail_w_h"
+            android:layout_marginEnd="@dimen/thumbnail_margin_end"
+            android:background="@color/thumbnail_bg"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
