--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#F46430</color>
     <color name="colorPrimaryDark">#D83D04</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="app_bg">#FAB297</color>
+    <color name="title_color">#4B4B4B</color>
+    <color name="thumbnail_bg">#FAB000</color>
 </resources>
